<?xml version="1.0" encoding="utf-8"?>

<resources>
    <!-- Name for the application [CHAR LIMIT=12] -->
    <string name="app_name">Academic Career</string>


    <!-- Label for overflow menu option that deletes all course data in the app [CHAR LIMIT=20] -->
    <string name="action_delete_all_entries">Delete All Courses</string>

    <!-- Title text for the empty view, which describes the empty dog house image [CHAR LIMIT=50] -->
    <string name="empty_view_title_text">You have not exams yet…</string>

    <!-- Subtitle text for the empty view that prompts the user to add a course [CHAR LIMIT=50] -->
    <string name="empty_view_subtitle_text">Get started by adding a course</string>

    <!-- Title for the activity to add a new course [CHAR LIMIT=20] -->
    <string name="editor_activity_title_new_course">Add a Course</string>

    <!-- Title for the activity to edit an existing course [CHAR LIMIT=20] -->
    <string name="editor_activity_title_edit_course">Edit Course</string>

    <!-- Label for editor menu option to save course and leave editor [CHAR LIMIT=20] -->
    <string name="action_save">Save</string>

    <!-- Label for editor overflow menu option that deletes the current course [CHAR LIMIT=20] -->
    <string name="action_delete">Delete</string>

    <!-- Toast message in editor when new course has been successfully inserted [CHAR LIMIT=NONE] -->
    <string name="editor_insert_course_successful">Course saved</string>

    <!-- Toast message in editor when new course has failed to be inserted [CHAR LIMIT=NONE] -->
    <string name="editor_insert_course_failed">Error with saving course</string>

    <!-- Toast message in editor when current course was successfully updated [CHAR LIMIT=NONE] -->
    <string name="editor_update_course_successful">Course updated</string>

    <!-- Toast message in editor when current course has failed to be updated [CHAR LIMIT=NONE] -->
    <string name="editor_update_course_failed">Error with updating course</string>

    <!-- Dialog message when user is leaving editor but hasn't saved changes [CHAR LIMIT=NONE] -->
    <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing?</string>

    <!-- Dialog button text for the option to discard a user's changes [CHAR LIMIT=20] -->
    <string name="discard">Discard</string>

    <!-- Dialog button text for the option to keep editing the current course [CHAR LIMIT=20] -->
    <string name="keep_editing">Keep Editing</string>

    <!-- Toast message in editor when current course was successfully deleted [CHAR LIMIT=NONE] -->
    <string name="editor_delete_course_successful">Course deleted</string>

    <!-- Toast message in editor when current course has failed to be deleted [CHAR LIMIT=NONE] -->
    <string name="editor_delete_course_failed">Error with deleting course</string>

    <!-- Dialog message to ask the user to confirm deleting the current course [CHAR LIMIT=NONE] -->
    <string name="delete_dialog_msg">Delete this course?</string>

    <string name="delete_dialog_msga">Delete all courses?</string>

    <!-- Dialog button text for the option to confirm deleting the current course [CHAR LIMIT=20] -->
    <string name="delete">Delete</string>

    <!-- Dialog button text for the option to cancel deletion of the current course [CHAR LIMIT=20] -->
    <string name="cancel">Cancel</string>

    <!-- Label for overview category of attributes in the editor [CHAR LIMIT=30] -->
    <string name="category_overview">Overview</string>


    <!-- Text hint for name field in the editor [CHAR LIMIT=30] -->
    <string name="hint_course_name">Name</string>

    <!-- Text hint for breed field in the editor [CHAR LIMIT=30] -->
    <string name="hint_course_credit">Credit from 1-15</string>

    <!-- Text hint for name field in the editor [CHAR LIMIT=30] -->
    <string name="hint_course_grade">Grade from 6-10</string>

    <string name="credits">Credits</string>

    <string name="average_quotation">Your Average Grade is :</string>
    <string name="sum_quotation">Credits obtained so far :</string>

    <string name="text1" translatable="false">Shelter</string>
    <string name="text2" translatable="false">Empty Shelter</string>
    <string name="about">About app</string>
    <string name="share">Share</string>
    <string name="rate">Rate on Play Store</string>
    <string name="contact">Contact the developer</string>
    <string name="about_info">Here\'s what you can do with Academic Career app:  ​ • Check your progress from the main screen: you\'ll always know your average grade  ​ • Easily insert your examinations to check your progress: it is a matter of seconds...</string>
    <string name="contact_info">No application can handle this request. Please install a webbrowser</string>


</resources>
